Bug 2045137 - Fix invisible autocomplete row text by using `--button-background-color-hover`. r=credential-management-reviewers,desktop-theme-reviewers,dimi,Itiel
Differential Revision: https://phabricator.services.mozilla.com/D305704

UltraBlame original commit: 548db66c0795d5e8aa6a52aad31613d93fd97995

--- a/browser/themes/shared/autocomplete.css
+++ b/browser/themes/shared/autocomplete.css
@@ -299,19 +299,12 @@
 .autocomplete-richlistitem {
   &:not([disabled]):is(:hover, [selected]) {
     background-color: var(--button-background-color-hover);
-    @media (forced-colors) {
-      background-color: ButtonText;
-      color: ButtonFace;
-    }
+    color: var(--button-text-color-hover);
   }
 
   &[selected]:active {
     background-color: var(--button-background-color-active);
-    color: inherit;
-    @media (forced-colors) {
-      background-color: SelectedItem;
-      color: SelectedItemText;
-    }
+    color: var(--button-text-color-active);
   }
 
   @media (forced-colors) {
